--- a/styles/main.css
+++ b/styles/main.css
@@ -15,3 +15,13 @@ a {
   height: 100%;
 }
 
+#info {
+  position: absolute;
+  bottom: 100px ;
+  color: black;
+  font-size: 70px;
+	width: 30%;
+	text-align: center;
+	z-index: 1;
+	display:block;
+}
