--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,7 @@ a {
 #info {
   position: absolute;
   bottom: 100px ;
-  color: black;
+  color: white  ;
   font-size: 70px;
 	width: 30%;
 	text-align: center;
