--- a/styles/main.css
+++ b/styles/main.css
@@ -3,16 +3,14 @@ body {
   overflow: hidden;
   color: white;
   text-align: center;
-}
-
-a {
-  color: white;
+  background-image: url(https://htmlcolorcodes.com/assets/images/html-color-codes-color-tutorials-hero-00e10b1f.jpg);
 }
 
 #scene-container {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 0;
 }
 
 #info {
@@ -25,3 +23,61 @@ a {
 	z-index: 1;
 	display:block;
 }
+
+#menu{
+  width:0px;
+  height:0px;
+  
+  border-left: 300px solid transparent;
+  border-right:300px solid transparent;
+  border-top: 300px solid transparent;
+  border-radius: px;
+  position:relative;
+  margin:auto;
+  top:5px;
+  left:2px;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
+
+
+#play {
+  position:relative;
+  bottom:30px;
+  right:300px;
+  height:auto;
+  width:600px;
+  background:#006680;
+  text-align:center;
+  font-size:150px;
+  background-size: 1px 300%;
+  -webkit-transition:0.5s;
+  transition:0.5s;
+  color:orange;
+  font-family:shadows into light;
+  
+  cursor:pointer; 
+}
+
+#diff {
+  position:relative;
+  width:100px;
+  background:#006680;
+  text-align:center;
+  font-size:100px;
+  background-size: 1px 300%;
+  -webkit-transition:0.5s;
+  transition:0.5s;
+  color:orange;
+  
+  cursor:pointer;
+}
+#play:hover  {
+  background:#7A0000;
+  color:white;
+  -webkit-transform:rotate(-1deg);
+  transform:rotate(-2deg);
+   
+}
+
+
