--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
+
+
 body {
   margin: 0px;
   overflow: hidden;
-  color: white;
-  text-align: center;
-  background-image: url(https://htmlcolorcodes.com/assets/images/html-color-codes-color-tutorials-hero-00e10b1f.jpg);
-}
-
-#scene-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
+  background-color: orange;
 }
 
 #info {
@@ -24,24 +18,70 @@ body {
 	display:block;
 }
 
-#menu{
-  width:0px;
-  height:0px;
-  
-  border-left: 300px solid transparent;
-  border-right:300px solid transparent;
-  border-top: 300px solid transparent;
-  border-radius: px;
-  position:relative;
-  margin:auto;
-  top:5px;
-  left:2px;
+#scene-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
+#title{
+  font-size:150px;
+}
+
+#menu{
+  text-align:center;
+  border-top: 100px solid transparent;
+  font-size:100px;
+  font-family:shadows into light;
+}
+
+#opt_menu{
+  border-top: 150px solid transparent;
+  border-left: 150px solid transparent;
+  text-align:left;
+  font-size:100px;
+  font-family:shadows into light;
+
+}
+
+.button_menu{ 
+  border-radius:10%;
+  text-align:center;
+  background:#006680;
+  width:600px;
+  font-size:50px;
+  font-family:shadows into light;
+  cursor:pointer; 
+  display: inline-block;
+}
+
+.button_opt{
+  border-radius:10%;
+  text-align:center;
+  background:#006680;
+  width:600px;
+  font-size:50px;
+  font-family:shadows into light;
+  cursor:pointer; 
+  display: inline-block;
+}
+
+.button_menu:hover{
+  background:#f52b2b;
+  color:white;
+  transform:rotate(3deg);
+}
+
+.button_opt:hover{
+  background:#f52b2b;
+  color:white;
+  transform:rotate(3deg);
+}
 
 
-#play {
+
+#test {
   position:relative;
   bottom:30px;
   right:300px;
@@ -58,26 +98,3 @@ body {
   
   cursor:pointer; 
 }
-
-#diff {
-  position:relative;
-  width:100px;
-  background:#006680;
-  text-align:center;
-  font-size:100px;
-  background-size: 1px 300%;
-  -webkit-transition:0.5s;
-  transition:0.5s;
-  color:orange;
-  
-  cursor:pointer;
-}
-#play:hover  {
-  background:#7A0000;
-  color:white;
-  -webkit-transform:rotate(-1deg);
-  transform:rotate(-2deg);
-   
-}
-
-
